force-app/main/default/objects/Blog_Comment__c/Blog_Comment__c.object-meta.xml
<CustomObject>

    <!-- Object Label -->
    <label>Blog Comment</label>
    <pluralLabel>Blog Comments</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Comment Number</label>
        <displayFormat>Comment-{00000}</displayFormat>
    </nameField>

    <!-- Object Settings -->
    <sharingModel>ReadWrite</sharingModel>

    <!-- Fields -->

    <!-- Lookup to Blog Post -->
    <fields>
        <fullName>Blog_Post__c</fullName>
        <label>Blog Post</label>
        <type>Lookup</type>
        <referenceTo>Blog_Post__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <required>true</required>
    </fields>

    <!-- Comment Body -->
    <fields>
        <fullName>Comment_Text__c</fullName>
        <label>Comment Text</label>
        <type>LongTextArea</type>
        <length>2000</length>
    </fields>

    <!-- Author Name -->
    <fields>
        <fullName>Author_Name__c</fullName>
        <label>Author Name</label>
        <type>Text</type>
        <length>100</length>
        <required>true</required>
    </fields>

    <!-- Author Email -->
    <fields>
        <fullName>Author_Email__c</fullName>
        <label>Author Email</label>
        <type>Email</type>
        <required>true</required>
    </fields>

    <!-- Status Picklist -->
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <!-- Posted Date -->
    <fields>
        <fullName>Posted_Date__c</fullName>
        <label>Posted Date</label>
        <type>DateTime</type>
    </fields>

</CustomObject>