force-app/main/default/objects/Blog_Comment__c/fields/Author_Email__c.field-meta.xml
<CustomField>
    <fullName>Author_Email__c</fullName>
    <label>Author Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>