force-app/main/default/objects/Blog_Comment__c/fields/Blog_Post__c.field-meta.xml
<CustomField>
    <fullName>Blog_Post__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blog Post</label>
    <referenceTo>Blog_Post__c</referenceTo>
    <relationshipLabel>Blog Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>